@@ -3,15 +3,15 @@ TODO < 0.4
 
 * keystrokes for SDL & doc. keystokes (OSD help?)
 
-* http://lash.nongnu.org/ support
-  - restore window position.  (maybe > 0.4)
-    (depends on X11/SDL 'get window position' see below)
+* bring SDL up to scratch - should behave as Xv.
+
+* remember and set window position when (re-)creating window
 
 * update the build information in the .spec.in 
 
 * qjadeo
  - specify midi device to use
- - allow to set offset + seek to as frame-int or SMPTE string.
+ - allow to set offset + "seek to" either as frame-integer or SMPTE string.
 
 
 TODO > 0.4.0
@@ -50,8 +50,6 @@ TODO - next major version:
 TODO - legacy and low priority issues / ideas
 ---------------------------------------------
   DISPLAY:
-
- - getwindow position 
 
  - SDL RGB SWSURFACE (new videomode)
 
